--- a/res/layout/activity_starting_point.xml
+++ b/res/layout/activity_starting_point.xml
@@ -1,10 +1,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_height="fill_parent">
     
-
-    <TextView
+     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Your total is 0" 
@@ -30,12 +29,5 @@
         android:id="@+id/bSub"
         />
     
-        
-    "
-    "
-    
-   
-
-
-</LinearLayout>
+    </LinearLayout>
 
