--- a/res/layout/text.xml
+++ b/res/layout/text.xml
@@ -34,8 +34,8 @@
         android:layout_height="wrap_content"
         android:text="ToggleButton" />
 </LinearLayout>
-    <TextView
-        android:id="@+id/tvResult"
+    <TextView
+        android:id="@+id/tvResults"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
